<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="title_first_app">POPULAR MOVIES</string>
    <string name="title_second_app">STOCK HAWK</string>
    <string name="title_third_app">BUILD IT BIGGER</string>
    <string name="title_fourth_app">MAKE YOUR APP MATERIAL</string>
    <string name="title_fiveth_app">GO UBIQUITOUS</string>
    <string name="title_sixth_app">CAPSTONE</string>

</resources>
